duniverse/menhirLib.20200211/test/static/bad/semibar.mly
%%

let main :=
  A

%token FOO
