duniverse/menhirLib.20200211/test/static/bad/semibar.exp
File "semibar.mly", line 6, characters 0-6:
Error: syntax error after 'A' and before '%token'.
At this point, one of the following is expected:
a semicolon ';' followed with an expression, or
a bar '|' followed with an expression, or
another rule.
